--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -55,9 +55,15 @@ Haroen \textsc{Viaene}\\
 
 % voorstelling van de instelling, de doelgroep, met contactpersoon, 1 bladzijde
 
-’t Wit Huis te Loppem is een voorziening van het type ``werken en wonen'' voor volwassen personen met een meervoudige handicap. In de meeste gevallen is dit een visuele handicap gecombineerd met een verstandelijke of motorische. De meeste van de bewoners blijven er permanent, maar er zijn er ook een aantal die enkele dagen per week ergens anders werken of verblijven.
+\emph{’t Wit Huis} te Loppem is een voorziening van het type ``werken en wonen'' voor volwassen personen met een meervoudige handicap. In de meeste gevallen is dit een visuele handicap gecombineerd met een verstandelijke of motorische. De meeste van de bewoners blijven er permanent, maar er zijn er ook een aantal die enkele dagen per week ergens anders werken of verblijven.
+
+De voorziening maakt deel uit van de organisatie Spermalie, en daarbinnen De Kade.
+
+\emph{’t Wit Huis} volgt de psychoanalytische werkvisie van Jacques Lacan.% wat doet die?
 
 De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een muziekgroep ``De Witte Wolven''(vroeger ``White House Band''), die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Wigbert en Wim Opbrouck. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld gecombineerd met de werken die door de bewoners zelf worden gemaakt. Deze werken worden ook over het hele centrum tentoon gesteld.
+
+Ook wordt er door de voorziening ergotherapie georganiseerd. Dit zijn activiteiten zoals boetseren, potten maken, papier scheppen, kaartjes maken, bloemschikken, thee, zeep, shampoos; maar ook eieren, fruit- en groenteteelt, pizza's en lasagne gemaakt om te verkopen aan buitenstaanders. Zo worden mensen zo vaak mogelijk betrokken binnen de organisatie, dit kadert in een een visie waarin er zoveel mogelijk aan integratie gewerkt wordt. Bewoners die hiertoe in staat zijn gaan ook bijvoorbeeld om hun eigen boodschappen.
 
 Op iets praktischer vlak helpen de bewoners ook mee met het repareren van bepaalde gebroken dingen, vogelnestjes maken, vroeger ook helpen met het eten (maar dit is tegenwoordig niet meer toegelaten door strengere eisen qua voedsel).
 
@@ -65,21 +71,14 @@ Ook is er een grote focus op sport, en wordt er ook elk jaar meegedaan aan evene
 
 Buiten sportwedstrijden wordt er ook na de activiteiten---al dan niet met vrijwilligers---aan sport zoals fietsen met tandems, fitness, wandelen enz. gedaan.
 
-De bewoners kunnen elk jaar een programma beslissen, met activiteiten die voorgesteld worden door de begeleiders zelf.
+Er worden ook vaak uitstappen georganiseerd, zoals laatst naar toneeloptredens, volksspelen, bibliotheken en ook op reis gegaan. Zo zijn ze al naar Engeland, Lourdes \dots gegaan.
 
-Op 't Wit Huis verblijven momenteel 33 bewoners van 19 tot 75 jaar. Ze worden begeleid door 30-tal begeleiders.
+De bewoners kunnen elk jaar een programma beslissen, met activiteiten die voorgesteld worden door de begeleiders zelf. Tijdens hun vrije tijd mogen ze in hun zelf versierde kamer verblijven, maar ook in de gemeenschappelijke ruimtes kom je altijd wel een aantal bewoners tegen.
 
-* ergotherapie (boetseren, potten maken, papier scheppen, kaartjes maken, bloemschikken, thee, zeep, shampoos) die verkocht worden
-* fruit- en groenteteelt, pizza's, lasagne, eieren
-* psychoanalytische werkvisie (Jacques Lacan)
-* Onderdeel vd Kade, Spermalie
-* contact Geert Viaene
-* Eigen kamer, met versieringen
-* Vrije tijd op eigen kamer
-* sommige zelfstandig boodschappen doen/wandelen
-* andere organisaties/hobby's zoals koor
-* uitstappen (Lourdes, Toneel, Optredens, volksspelen, bibliotheken)
-* vrijwilligers
+Op \emph{'t Wit Huis} verblijven momenteel 33 bewoners van 19 tot 75 jaar. Ze worden begeleid door 30-tal begeleiders.
+
+Mijn initiële contactpersoon in deze voorziening is mijn vader, Geert Viaene, maar tijdens de stage volg ik ook de activiteiten van Jürgen Tierlinckx en Bart% check %
+. \emph{'t Wit Huis} bevindt zich in de Rijselsestraat 13, 8200 Loppem.
 
 \section{Verslag}
 
@@ -119,7 +118,8 @@ Om 16:45 heb ik mijn dag afgesloten en ben ik naar huis gegaan.
 
 \subsubsection{Voormiddag}
 
-Deze dag begon net zoals gisteren met de vergadering die alle bewoners en de taken overloopt. Deze duurt van 8:30 tot 9:00. Hierin wordt nog eens bevestigd dat ik deze morgen de activiteit \emph{muziek} volg.
+Deze dag begon net zoals gisteren met de vergadering die alle bewoners en de taken overloopt. Deze duurt van 8:30 tot 9:00. Hierin wordt nog eens bevestigd dat ik deze morgen de activiteit \emph{muziek} volg. Deze wordt
+% vul aan
 
 \subsection{Maandag 21 december 2015}
 
