--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -118,8 +118,15 @@ Om 16:45 heb ik mijn dag afgesloten en ben ik naar huis gegaan.
 
 \subsubsection{Voormiddag}
 
-Deze dag begon net zoals gisteren met de vergadering die alle bewoners en de taken overloopt. Deze duurt van 8:30 tot 9:00. Hierin wordt nog eens bevestigd dat ik deze morgen de activiteit \emph{muziek} volg. Deze wordt
-% vul aan
+Deze dag begon net zoals gisteren met de vergadering die alle bewoners en de taken overloopt. Deze duurt van 8:30 tot 9:00. Hierin wordt nog eens bevestigd dat ik deze morgen de activiteit \emph{muziek} volg. Deze wordt begeleid door Geert Viaene. Het is leuk om de bewoners in deze context te zien verademen en veel van hun creatieve energie kwijt te raken.
+
+Zoals eerder al gezegd zijn er al cd's opgenomen in het verleden, en nu werken ze aan nieuwe opnames. Een vrijwilliger die een eigen studio heeft zal helpen met het opnemen ervan.
+
+De bewoners schrijven hun eigen nummers, die vaak gaan over liefde, dingen die ze tegenkomen tijdens de dagelijkse sleur. Enkele bewoners zingen ook over de dingen die ze herinneren van voor ze hier verbleven, van toen ze een \emph{normaler} leven hadden.
+
+Tijdens deze activiteit was er een grote vraag vanuit de bewoners dat ik ook op de \emph{batphone} speelde en meezong. Ik merkte dat ze door hun meestal visuele handicap een uitzonderlijk goed ritmegevoel hebben.
+
+Om 11:45 eindigde deze activiteit en heb ik in een andere groep dan gisteren meegeholpen met het eten. Het afwassen gebeurt ook deels met de bewoners, die hier kennelijk wel plezier in hebben, maar niet iedereen vindt dit aangenaam, dus worden ze er niet toe verplicht. Om 13:15 was dit gedaan.
 
 \subsection{Maandag 21 december 2015}
 
