--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -128,6 +128,10 @@ Tijdens deze activiteit was er een grote vraag vanuit de bewoners dat ik ook op 
 
 Om 11:45 eindigde deze activiteit en heb ik in een andere groep dan gisteren meegeholpen met het eten. Het afwassen gebeurt ook deels met de bewoners, die hier kennelijk wel plezier in hebben, maar niet iedereen vindt dit aangenaam, dus worden ze er niet toe verplicht. Om 13:15 was dit gedaan.
 
+\subsubsection{Namiddag}
+
+De namiddag begint zoals elke dinsdagnamiddag met de bewonersvergadering, hierin worden de nieuwigheden van de week, het menu, speciale dingen overlopen door een begeleider, maar ook krijgt elk van de bewoners de kans om % Jan
+
 \subsection{Maandag 21 december 2015}
 
 \section{Ervaringen}
