more intro && empty photo

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -59,7 +59,7 @@ Haroen \textsc{Viaene}\\
 
 De voorziening maakt deel uit van de organisatie Spermalie, en daarbinnen De Kade.
 
-\emph{’t Wit Huis} volgt de psychoanalytische werkvisie van Jacques Lacan.% wat doet die?
+\emph{’t Wit Huis} volgt de psychoanalytische werkvisie van Jacques Lacan. Deze visie gaat ervan uit dat we allemaal ons eigen geluk zelf kunnen vinden. Daarom wordt er hier zo veel mogelijk ruimte gelaten voor vrije tijd en voor creativiteit binnen de activiteiten. Zo zal er nooit gezegd worden ``We zullen nu dit liedje van die artiest spelen'', maar wel ``Welk liedje dat je geschreven hebt gaan we nu spelen, Peter?''.
 
 De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een muziekgroep ``De Witte Wolven''(vroeger ``White House Band''), die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Wigbert en Wim Opbrouck. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld gecombineerd met de werken die door de bewoners zelf worden gemaakt. Deze werken worden ook over het hele centrum tentoon gesteld.
 
@@ -125,6 +125,12 @@ Zoals eerder al gezegd zijn er al cd's opgenomen in het verleden, en nu werken z
 De bewoners schrijven hun eigen nummers, die vaak gaan over liefde, dingen die ze tegenkomen tijdens de dagelijkse sleur. Enkele bewoners zingen ook over de dingen die ze herinneren van voor ze hier verbleven, van toen ze een \emph{normaler} leven hadden.
 
 Tijdens deze activiteit was er een grote vraag vanuit de bewoners dat ik ook op de \emph{batphone} speelde en meezong. Ik merkte dat ze door hun meestal visuele handicap een uitzonderlijk goed ritmegevoel hebben.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{./muziek.jpg}
+  \caption{De groep die muziek maakt tussen twee nummers in}
+\end{figure}
 
 Om 11:45 eindigde deze activiteit en heb ik in een andere groep dan gisteren meegeholpen met het eten. Het afwassen gebeurt ook deels met de bewoners, die hier kennelijk wel plezier in hebben, maar niet iedereen vindt dit aangenaam, dus worden ze er niet toe verplicht. Om 13:15 was dit gedaan.
 
