voormiddag en namiddag een beetje

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -47,6 +47,7 @@ Haroen \textsc{Viaene}\\
 
 \section*{Inhoud}
 
+% maak Nederlandstalig
 \tableofcontents
 
 \newpage
@@ -132,11 +133,24 @@ Tijdens deze activiteit was er een grote vraag vanuit de bewoners dat ik ook op 
   \caption{De groep die muziek maakt tussen twee nummers in}
 \end{figure}
 
-Om 11:45 eindigde deze activiteit en heb ik in een andere groep dan gisteren meegeholpen met het eten. Het afwassen gebeurt ook deels met de bewoners, die hier kennelijk wel plezier in hebben, maar niet iedereen vindt dit aangenaam, dus worden ze er niet toe verplicht. Om 13:15 was dit gedaan.
+Om 11:45 eindigde deze activiteit en heb ik in een andere groep dan gisteren meegeholpen met het eten. Het afwassen gebeurt ook deels met de bewoners, die hier kennelijk wel plezier in hebben, maar niet iedereen vindt dit aangenaam, dus worden ze er niet toe verplicht. Om 13:00 was dit gedaan.
+
+Dan vertelde een bewoners dat hij iets had dat hij mij graag wou laten zien. Hij had namelijk een liedje opgenomen dat op de radio speelde (\emph{Relax - Mika}). Hij genoot er duidelijk van dat hij nu tijd had om wat hij leuk vond te delen met iemand die minder tijdsdruk heeft dan een andere opvoeder.
+
+Daaropvolgend werd hij opgebeld door zijn ouders, waarna hij door ging om de verjaardag van één van de anderen te vieren in de Pizza Hut. Hij vertrok rond 13:20.
 
 \subsubsection{Namiddag}
 
-De namiddag begint zoals elke dinsdagnamiddag met de bewonersvergadering, hierin worden de nieuwigheden van de week, het menu, speciale dingen overlopen door een begeleider, maar ook krijgt elk van de bewoners de kans om % Jan
+De namiddag begint zoals elke dinsdagnamiddag met de bewonersvergadering, hierin worden de nieuwigheden van de week, het menu, speciale dingen overlopen door een begeleider, maar ook krijgt elk van de bewoners de kans om hun eigen mening en dingen die volgens hun fout gaan aan te kaarten.
+
+Zo werd er bijvoorbeeld verteld over wie naar hun familie ging over de kerstperiode, iemand die dan op reis zal gaan, een lamp die gebroken was \dots
+
+Ik heb de bewonersvergadering twee keer bijgewoond, want \emph{'t Wit Huis} is opgedeeld in twee \emph{units}, en één van die is nog eens opgedeeld daarbinnen. Dit is omdat er een groot leeftijdsverschil is tussen die twee groepen, en dat dus hun noden anders zijn.
+
+De eerste vergadering duurde tot 15:00, de tweede tot 15:30. Hierna heb ik met enkele van de bewoners gepraat over alledaagse dingen. Daarna stelde een bewoner voor om zijn muziekcollectie te laten horen op zijn kamer.
+
+Die bewoner was een grote fan van Studio Brussel, en
+% Jan
 
 \subsection{Maandag 21 december 2015}
 
