--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -149,8 +149,13 @@ Ik heb de bewonersvergadering twee keer bijgewoond, want \emph{'t Wit Huis} is o
 
 De eerste vergadering duurde tot 15:00, de tweede tot 15:30. Hierna heb ik met enkele van de bewoners gepraat over alledaagse dingen. Daarna stelde een bewoner voor om zijn muziekcollectie te laten horen op zijn kamer.
 
-Die bewoner was een grote fan van Studio Brussel, en
-% Jan
+Die bewoner was een grote fan van Studio Brussel, en ook van \emph{drum and bass}. Toevallig of niet is dit ook mijn lievelingsgenre, dus we praatten hierover voor enkele minuten.
+
+Daarna merkte ik op dat hij een hoop boekjes in braille liggen had. Het leek voor mij alsof ze dezelfde titel hadden, maar blijkbaar gaat het over één boek dat in een hoop hoofdstukken onderverdeeld is. Hij is een van de weinige bewoners die braille kan lezen, omdat de meeste anderen daar het nut niet van inzien. Braille is iets wat je moet blijven onderhouden, anders vergeet je het opnieuw. Het boek is een geschiedenisroman over Keizer Karel en de Gentenaars.
+
+Daarna vertelde hij dat hij ook graag accordeon speelt. Hij is begonnen met accordeon spelen na het overlijden van zijn geleidehond, acht jaar geleden. Hij speelt niet mee in ``De Witte Wolven'', omdat hij niet van die drukte houdt, hij speelt liever alleen. Daarom vindt hij het jammer dat hij zijn accordeon zelf niet kan uithalen, omdat de kans groot is dat hij hem zou laten vallen.
+
+Om 16:40 ga ik weg van bij die bewoner omdat de avondshift begint, en ga ik naar huis.
 
 \subsection{Maandag 21 december 2015}
 
