--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -125,7 +125,7 @@ Zoals eerder al gezegd zijn er al cd's opgenomen in het verleden, en nu werken z
 
 De bewoners schrijven hun eigen nummers, die vaak gaan over liefde, dingen die ze tegenkomen tijdens de dagelijkse sleur. Enkele bewoners zingen ook over de dingen die ze herinneren van voor ze hier verbleven, van toen ze een \emph{normaler} leven hadden.
 
-Tijdens deze activiteit was er een grote vraag vanuit de bewoners dat ik ook op de \emph{batphone} speelde en meezong. Ik merkte dat ze door hun meestal visuele handicap een uitzonderlijk goed ritmegevoel hebben.
+Tijdens deze activiteit was er een grote vraag vanuit de bewoners dat ik ook op de \emph{batphone} (een soort panfluit, maar dan met elk van de buizen met een diameter van tien centimeter, en één tot anderhalve meter lang, je bespeelt het met een soort pingpongpalletjes gemaakt uit foam) speelde en meezong. Ik merkte dat ze door hun meestal visuele handicap een uitzonderlijk goed ritmegevoel hebben.
 
 \begin{figure}[H]
   \centering
