--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -166,6 +166,7 @@ Om 16:40 ga ik weg van bij die bewoner omdat de avondshift begint, en ga ik naar
 
 \subsection{Door mezelf}
 % hele bladzijde
+Ik heb eigenlijk echt genoten van de stage, het is een ontluchting om te zien hoe bepaalde mensen tevreden kunnen zijn met minder te bereiken. Ze beseffen zelf ook dat ze bijvoorbeeld nooit zullen lezen, maar ze kunnen hun creativiteit kwijt op een hoop verschillende manieren
 
 
 \end{document}
