--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -70,7 +70,7 @@ Op iets praktischer vlak helpen de bewoners ook mee met het repareren van bepaal
 
 Ook is er een grote focus op sport, en wordt er ook elk jaar meegedaan aan evenementen zoals de Special Olympics en lokale fiets-, loop-, zwem- en andere wedstrijden.
 
-Buiten sportwedstrijden wordt er ook na de activiteiten---al dan niet met vrijwilligers---aan sport zoals fietsen met tandems, fitness, wandelen enz. gedaan.
+Buiten sportwedstrijden wordt er ook na de activiteiten --- al dan niet met vrijwilligers --- aan sport zoals fietsen met tandems, fitness, wandelen enz. gedaan.
 
 Er worden ook vaak uitstappen georganiseerd, zoals laatst naar toneeloptredens, volksspelen, bibliotheken en ook op reis gegaan. Zo zijn ze al naar Engeland, Lourdes \dots gegaan.
 
@@ -166,7 +166,12 @@ Om 16:40 ga ik weg van bij die bewoner omdat de avondshift begint, en ga ik naar
 
 \subsection{Door mezelf}
 % hele bladzijde
-Ik heb eigenlijk echt genoten van de stage, het is een ontluchting om te zien hoe bepaalde mensen tevreden kunnen zijn met minder te bereiken. Ze beseffen zelf ook dat ze bijvoorbeeld nooit zullen lezen, maar ze kunnen hun creativiteit kwijt op een hoop verschillende manieren
+Ik heb eigenlijk echt genoten van de stage, het is een ontluchting om te zien hoe bepaalde mensen tevreden kunnen zijn met minder te bereiken. Ze beseffen zelf ook dat ze bijvoorbeeld nooit zullen lezen, maar ze kunnen hun creativiteit kwijt op een hoop verschillende manieren. Hier is een belangrijke levensles uit te vinden, namelijk dat je moet zien als je op je eigen grens komt, en dat je dan het gelukkigst kan zijn door niet jezelf (of anderen) proberen verder te duwen.
 
+Verder heb ik meer begrip gekregen om dingen vaak opnieuw te moeten herhalen --- er waren enkele bewoners waarvoor het nodig was om dezelfde vragen steeds opnieuw te stellen --- want dit kan voor bepaalde mensen een grote steun zijn, en zekerheid bieden.
+
+Aan een andere kant heb ik ook mezelf herkend in bepaalde van de bewoners. Ik ben niet zo zeker of ik er veel uit kan leren, maar het is toch een bevestiging voor mij dat autisme iets is dat ik effectief heb.
+
+Ik ben ook blij dat ik na lange tijd toch nog eens terug gegaan ben naar waar mijn vader werkt, en het verwonderde me positief dat enkelen van de bewoners mij nog herkenden. Zo zie je maar hoeveel indruk je kan nalaten in een korte tijd.
 
 \end{document}
