done with own evaluation

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -70,7 +70,7 @@ Op iets praktischer vlak helpen de bewoners ook mee met het repareren van bepaal
 
 Ook is er een grote focus op sport, en wordt er ook elk jaar meegedaan aan evenementen zoals de Special Olympics en lokale fiets-, loop-, zwem- en andere wedstrijden.
 
-Buiten sportwedstrijden wordt er ook na de activiteiten --- al dan niet met vrijwilligers --- aan sport zoals fietsen met tandems, fitness, wandelen enz. gedaan.
+Buiten sportwedstrijden wordt er ook na de activiteiten --- al dan niet met vrijwilligers --- aan sport zoals fietsen met tandems, fitness, wandelen en meer gedaan.
 
 Er worden ook vaak uitstappen georganiseerd, zoals laatst naar toneeloptredens, volksspelen, bibliotheken en ook op reis gegaan. Zo zijn ze al naar Engeland, Lourdes \dots gegaan.
 
@@ -78,8 +78,8 @@ De bewoners kunnen elk jaar een programma beslissen, met activiteiten die voorge
 
 Op \emph{'t Wit Huis} verblijven momenteel 33 bewoners van 19 tot 75 jaar. Ze worden begeleid door 30-tal begeleiders.
 
-Mijn initiële contactpersoon in deze voorziening is mijn vader, Geert Viaene, maar tijdens de stage volg ik ook de activiteiten van Jürgen Tierlinckx en Bart% check %
-. \emph{'t Wit Huis} bevindt zich in de Rijselsestraat 13, 8200 Loppem.
+Mijn initiële contactpersoon in deze voorziening is mijn vader, Geert Viaene, maar tijdens de stage volg ik ook de activiteiten van Jürgen Tierlinckx, Geert Viaene en Bart. \emph{'t Wit Huis} bevindt zich in de Rijselsestraat 13, 8200 Loppem.
+% check the name
 
 \section{Verslag}
 
@@ -173,5 +173,16 @@ Verder heb ik meer begrip gekregen om dingen vaak opnieuw te moeten herhalen ---
 Aan een andere kant heb ik ook mezelf herkend in bepaalde van de bewoners. Ik ben niet zo zeker of ik er veel uit kan leren, maar het is toch een bevestiging voor mij dat autisme iets is dat ik effectief heb.
 
 Ik ben ook blij dat ik na lange tijd toch nog eens terug gegaan ben naar waar mijn vader werkt, en het verwonderde me positief dat enkelen van de bewoners mij nog herkenden. Zo zie je maar hoeveel indruk je kan nalaten in een korte tijd.
+
+Tijdens mijn stage heb ik ook gemerkt hoe veel je nog kan doen als je volgens conventionele idealen niet veel meer betekent voor de maatschappij. Als je op de juiste manier begeleid wordt kan je zeker nog gelukkig zijn, en veel dingen maken of doen zijn wel nog mogelijk.
+
+Wat ook interessant is, is hoe bepaalde beperkingen die een mens heeft ervoor kan zorgen dat dat opgevangen wordt door andere dingen die dan weer heel goed gaan. Bijvoorbeeld de bewoners die meedoen aan het muziekproject hebben allemaal een uitzonderlijk goed ritmegevoel, zelfs al krijgen ze het niet altijd perfect uit hun armen of stembanden. Daardoor is het eigenlijk los van hun handicaps nog steeds een relatief goeie band.
+
+Ik zou ook willen pleiten voor meer aanpassing in de maatschappij om mensen met een beperking meer te kunnen integreren in de gewone dag. Door kleine aanpassingen kan je een veel groter publiek bereiken. Websites kunnen ervoor zorgen dat hun producten altijd goed rekening houden met voorleessoftware, vergroot lettertype, contrast \dots Een voorbeeld in een andere sector is dan bijvoorbeeld de \emph{batphone}, een muziekinstrument dat lijkt op een grote panfluit in felle kleuren die bespeeld kan worden met grotere pingpongpalletjes uit dik foam is heel goed te bespelen door muzikanten die bijna niet kunnen zien zelfs.
+
+Om af te sluiten bedank ik graag alle werknemers van \emph{'t Wit Huis}, en in het bijzonder Jürgen Tierlinckx, Bart, Geert Viaene en de groepschef Luc Neirinck om me te begeleiden in deze stage en er een interessante invulling aan geven. Maar meer dan ze te bedanken voor mijn eigen ervaring zou ik ze willen bedanken voor wat ze alle dagen doen: op een vrije manier alle bewoners dagelijks helpen met hun moeilijkheden en hun tijd zo aangenaam mogelijk maken.
+% check the name
+
+Als laatste zou ik ook (ook al weet ik dat ze dit niet kunnen lezen) alle bewoners van \emph{'t Wit Huis} willen bedanken voor hun enthousiasme en de tijd die ik met hun heb kunnen besteden.
 
 \end{document}
