begin evaluatie collega's

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -158,11 +158,27 @@ Daarna vertelde hij dat hij ook graag accordeon speelt. Hij is begonnen met acco
 Om 16:40 ga ik weg van bij die bewoner omdat de avondshift begint, en ga ik naar huis.
 
 \subsection{Maandag 21 december 2015}
+\subsubsection{Voormiddag}
+% more
+
+\subsubsection{Namiddag}
+% more
 
 \section{Ervaringen}
 
 \subsection{Door het personeel}
 % halve bladzijde
+Na mijn stage heb ik te horen gekregen van elk van de begeleiders --- voor ik zelfs voor feedback vroeg --- dat ik een goeie aanvulling was, en zelfs --- al dan niet als grap --- voorstellen kreeg om toch hier te komen werken.
+
+Volgens de begeleider waarbij ik de muziekactiviteit deed, heb ik goed aangevuld bij de activiteit. Letterlijk zei hij het volgende:
+
+\begin{quotation}
+  Je hebt het vandaag goed gedaan hoor in het muziekproject!
+\end{quotation}
+
+Volgens de andere
+
+% more
 
 \subsection{Door mezelf}
 % hele bladzijde
