--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -60,7 +60,7 @@ Haroen \textsc{Viaene}\\
 
 De voorziening maakt deel uit van de organisatie Spermalie, en daarbinnen De Kade.
 
-\emph{’t Wit Huis} volgt de psychoanalytische werkvisie van Jacques Lacan. Deze visie gaat ervan uit dat we allemaal ons eigen geluk zelf kunnen vinden. Daarom wordt er hier zo veel mogelijk ruimte gelaten voor vrije tijd en voor creativiteit binnen de activiteiten. Zo zal er nooit gezegd worden ``We zullen nu dit liedje van die artiest spelen'', maar wel ``Welk liedje dat je geschreven hebt gaan we nu spelen, Peter?''.
+\emph{’t Wit Huis} volgt de psychoanalytische werkvisie van Jacques Lacan. Deze visie gaat ervan uit dat we allemaal ons eigen geluk zelf kunnen vinden. Daarom wordt er hier zo veel mogelijk ruimte gelaten voor vrije tijd en voor creativiteit binnen de activiteiten. Zo zal er nooit gezegd worden \emph{``We zullen nu dit liedje van die artiest spelen''}, maar wel \emph{``Welk liedje dat je geschreven hebt gaan we nu spelen, Peter?''}.
 
 De activiteiten zijn zeer gevarieerd, en meestal op het creatieve vlak van de bewoners gericht. Zo is er een muziekgroep ``De Witte Wolven''(vroeger ``White House Band''), die vroeger enkele cd's uitgebracht heeft en ook samen gewerkt heeft met o.a. Wigbert en Wim Opbrouck. Verder is er recent een gedichtenbundel uitgebracht, een zeer actieve beeldentuin met werken van bekende kunstenaars van over de wereld gecombineerd met de werken die door de bewoners zelf worden gemaakt. Deze werken worden ook over het hele centrum tentoon gesteld.
 
