zinnetje meer en zo

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -54,8 +54,6 @@ Haroen \textsc{Viaene}\\
 
 \section{Voorstelling}
 
-% voorstelling van de instelling, de doelgroep, met contactpersoon, 1 bladzijde
-
 \emph{’t Wit Huis} te Loppem is een voorziening van het type ``werken en wonen'' voor volwassen personen met een meervoudige handicap. In de meeste gevallen is dit een visuele handicap gecombineerd met een verstandelijke of motorische. De meeste van de bewoners blijven er permanent, maar er zijn er ook een aantal die enkele dagen per week ergens anders werken of verblijven.
 
 De voorziening maakt deel uit van de organisatie Spermalie, en daarbinnen De Kade.
@@ -176,12 +174,10 @@ Volgens de begeleider waarbij ik de muziekactiviteit deed, heb ik goed aangevuld
   Je hebt het vandaag goed gedaan hoor in het muziekproject!
 \end{quotation}
 
-Volgens de andere
-
+Volgens de andere begeleiders kan ik ``goed omgaan met de bewoners'' en ``breng ik [\dots] op een positieve manier aan het lachen''.
 % more
 
 \subsection{Door mezelf}
-% hele bladzijde
 Ik heb eigenlijk echt genoten van de stage, het is een ontluchting om te zien hoe bepaalde mensen tevreden kunnen zijn met minder te bereiken. Ze beseffen zelf ook dat ze bijvoorbeeld nooit zullen lezen, maar ze kunnen hun creativiteit kwijt op een hoop verschillende manieren. Hier is een belangrijke levensles uit te vinden, namelijk dat je moet zien als je op je eigen grens komt, en dat je dan het gelukkigst kan zijn door niet jezelf (of anderen) proberen verder te duwen.
 
 Verder heb ik meer begrip gekregen om dingen vaak opnieuw te moeten herhalen --- er waren enkele bewoners waarvoor het nodig was om dezelfde vragen steeds opnieuw te stellen --- want dit kan voor bepaalde mensen een grote steun zijn, en zekerheid bieden.
