--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,12pt]{article}
-\usepackage[english]{babel}
+\usepackage[dutch]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath, epic, eepic, float, subfig, amsfonts, color, amsthm, textcomp, microtype, fullpage}
 \usepackage[parfill]{parskip}
@@ -158,6 +158,7 @@ Om 16:40 ga ik weg van bij die bewoner omdat de avondshift begint, en ga ik naar
 \subsection{Maandag 21 december 2015}
 \subsubsection{Voormiddag}
 % more
+Deze voormiddag is begonnen zoals alle dagen om 8:30 met de gewoonlijke vergadering. Hierin werden alle bewoners overlopen en alles wat tijdens de vorige dagen gebeurd is. Aangezien dit allemaal confidentieel is
 
 \subsubsection{Namiddag}
 % more
