--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -76,7 +76,7 @@ De bewoners kunnen elk jaar een programma beslissen, met activiteiten die voorge
 
 Op \emph{'t Wit Huis} verblijven momenteel 33 bewoners van 19 tot 75 jaar. Ze worden begeleid door 30-tal begeleiders.
 
-Mijn initiële contactpersoon in deze voorziening is mijn vader, Geert Viaene, maar tijdens de stage volg ik ook de activiteiten van Jürgen Tierlinckx, Geert Viaene en Bart. \emph{'t Wit Huis} bevindt zich in de Rijselsestraat 13, 8200 Loppem.
+Mijn initiële contactpersoon in deze voorziening is mijn vader, Geert Viaene, maar tijdens de stage volg ik ook de activiteiten van Jürgen Tuerlinckx, Geert Viaene en Bart. \emph{'t Wit Huis} bevindt zich in de Rijselsestraat 13, 8200 Loppem.
 % check the name
 
 \section{Verslag}
@@ -91,7 +91,7 @@ Ik ben toegekomen per fiets om iets na 8:00 's morgens. De echte werkdag begon e
 
 Rond 8:30 begint de vergadering, waarvan ik uiteraard niets mag vertellen in dit verslag. Hier kreeg ik mijn taak voor de dag en de volgende dagen, namelijk deze morgen \emph{klusklub}, in de namiddag \emph{wandelen}, morgen \emph{muziek} en in de namiddag \emph{bewonersvergadering} (voor de meeste andere begeleiders is het dan vergadering waar ik niet aan meedoe). Volgende maandag is het hetzelfde programma als vandaag.
 
-Ik volg deze morgen opvoeder Jürgen Tierlinkx. We beginnen met de drie bewoners waarbij hij de \emph{morgengroet} doet. Dit is redelijk simpel aangezien het opstaan relatief autonoom gebeurt (of misschien tijdens de nachtshift, ik ben het niet helemaal zeker). De taak die hierbij hoort is eigenlijk redelijk gemakkelijk, en bestaat uit het controleren dat die bewoners effectief aanwezig zijn, hun bet effectief gemaakt is en ze geschoren zijn en hun tanden gepoetst hebben. Dit gebeurde aan een redelijk laid-back tempo, waardoor het ongeveer 10:00 was toen we begonnen met de activiteit.
+Ik volg deze morgen opvoeder Jürgen Tuerlinkx. We beginnen met de drie bewoners waarbij hij de \emph{morgengroet} doet. Dit is redelijk simpel aangezien het opstaan relatief autonoom gebeurt (of misschien tijdens de nachtshift, ik ben het niet helemaal zeker). De taak die hierbij hoort is eigenlijk redelijk gemakkelijk, en bestaat uit het controleren dat die bewoners effectief aanwezig zijn, hun bet effectief gemaakt is en ze geschoren zijn en hun tanden gepoetst hebben. Dit gebeurde aan een redelijk laid-back tempo, waardoor het ongeveer 10:00 was toen we begonnen met de activiteit.
 
 De activiteit in de morgen heette \emph{klusklub}, waarbij een aantal bewoners meehelpen met enkele klusjes die nodig zijn in het gebouw. Dit kunnen dingen zijn als gebroken toestellen repareren, of zoals nu een verbetering ergens aan toevoegen.
 
@@ -158,7 +158,11 @@ Om 16:40 ga ik weg van bij die bewoner omdat de avondshift begint, en ga ik naar
 \subsection{Maandag 21 december 2015}
 \subsubsection{Voormiddag}
 % more
-Deze voormiddag is begonnen zoals alle dagen om 8:30 met de gewoonlijke vergadering. Hierin werden alle bewoners overlopen en alles wat tijdens de vorige dagen gebeurd is. Aangezien dit allemaal confidentieel is
+Deze voormiddag is begonnen zoals alle dagen om 8:30 met de gewoonlijke vergadering. Hierin werden alle bewoners overlopen en alles wat tijdens de vorige dagen gebeurd is. Aangezien dit allemaal confidentieel is, kan ik hier niet veel over vertellen. Ik volg deze morgen volg ik opnieuw Jurgen. Ik volg dus ook samen met hem vier bewoners voor de morgenronde.
+
+Ik heb niet zo heel goed opgelet tot hoe lang dit duurde, maar om half 10 waren we allemaal koffie aan het drinken in het muzieklokaal --- waar de \emph{klusklub} ook samenkomt. Omdat er veel afwezigen zijn in de kerstvakantie ---enkelen bij hun familie op bezoek, anderen zijn zelfs op reis --- zijn we slechts met drie bewoners. Deze keer is er een klusje in de \emph{klusbus} gestopt, het lijmen van de gebroken filter voor een badkamerlamp.
+
+We beginnen echter met het juist steken van de voetsteunen van een rolstoel. Ik help hierbij een van de bewoners, die
 
 \subsubsection{Namiddag}
 % more
@@ -193,7 +197,7 @@ Wat ook interessant is, is hoe bepaalde beperkingen die een mens heeft ervoor ka
 
 Ik zou ook willen pleiten voor meer aanpassing in de maatschappij om mensen met een beperking meer te kunnen integreren in de gewone dag. Door kleine aanpassingen kan je een veel groter publiek bereiken. Websites kunnen ervoor zorgen dat hun producten altijd goed rekening houden met voorleessoftware, vergroot lettertype, contrast \dots Een voorbeeld in een andere sector is dan bijvoorbeeld de \emph{batphone}, een muziekinstrument dat lijkt op een grote panfluit in felle kleuren die bespeeld kan worden met grotere pingpongpalletjes uit dik foam is heel goed te bespelen door muzikanten die bijna niet kunnen zien zelfs.
 
-Om af te sluiten bedank ik graag alle werknemers van \emph{'t Wit Huis}, en in het bijzonder Jürgen Tierlinckx, Bart, Geert Viaene en de groepschef Luc Neirinck om me te begeleiden in deze stage en er een interessante invulling aan geven. Maar meer dan ze te bedanken voor mijn eigen ervaring zou ik ze willen bedanken voor wat ze alle dagen doen: op een vrije manier alle bewoners dagelijks helpen met hun moeilijkheden en hun tijd zo aangenaam mogelijk maken.
+Om af te sluiten bedank ik graag alle werknemers van \emph{'t Wit Huis}, en in het bijzonder Jürgen Tuerlinckx, Bart, Geert Viaene en de groepschef Luc Neirinck om me te begeleiden in deze stage en er een interessante invulling aan geven. Maar meer dan ze te bedanken voor mijn eigen ervaring zou ik ze willen bedanken voor wat ze alle dagen doen: op een vrije manier alle bewoners dagelijks helpen met hun moeilijkheden en hun tijd zo aangenaam mogelijk maken.
 % check the name
 
 Als laatste zou ik ook (ook al weet ik dat ze dit niet kunnen lezen) alle bewoners van \emph{'t Wit Huis} willen bedanken voor hun enthousiasme en de tijd die ik met hun heb kunnen besteden.
