--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -157,14 +157,23 @@ Om 16:40 ga ik weg van bij die bewoner omdat de avondshift begint, en ga ik naar
 
 \subsection{Maandag 21 december 2015}
 \subsubsection{Voormiddag}
-% more
 Deze voormiddag is begonnen zoals alle dagen om 8:30 met de gewoonlijke vergadering. Hierin werden alle bewoners overlopen en alles wat tijdens de vorige dagen gebeurd is. Aangezien dit allemaal confidentieel is, kan ik hier niet veel over vertellen. Ik volg deze morgen volg ik opnieuw Jurgen. Ik volg dus ook samen met hem vier bewoners voor de morgenronde.
 
 Ik heb niet zo heel goed opgelet tot hoe lang dit duurde, maar om half 10 waren we allemaal koffie aan het drinken in het muzieklokaal --- waar de \emph{klusklub} ook samenkomt. Omdat er veel afwezigen zijn in de kerstvakantie ---enkelen bij hun familie op bezoek, anderen zijn zelfs op reis --- zijn we slechts met drie bewoners. Deze keer is er een klusje in de \emph{klusbus} gestopt, het lijmen van de gebroken filter voor een badkamerlamp.
 
-We beginnen echter met het juist steken van de voetsteunen van een rolstoel. Ik help hierbij een van de bewoners, die
+We beginnen echter met het juist steken van de voetsteunen van een rolstoel. Ik help hierbij een van de bewoners, die een beetje moeite heeft met het in- en uitdraaien van een \emph{emraco}-sleutel voor de regeling.
+
+Nadat dat opgelost is, lijmt een van de bewoners het plastic van de gebroken filter. Hierbij help ik ook met het recht houden en aandrukken ervan.
+
+Daarna gaan we naar de Brico in Oostkamp. We halen een plank om volgende keer een sokkel voor de \emph{klusbus} (waarin bewoners en begeleiders klusjes kunnen opschrijven) mee te maken. Een van de bewoners die nu en dan ook zelf boodschappen doet vervangt zijn klantenkaart omdat zijn oude per ongeluk in de was geraakt was.
+
+Vanaf dat we terug waren (11:30) was er even vrije tijd, waarin Jurgen mijn evaluatie ingevuld heeft, en ik heb ondertussen gepraat in de living met enkele bewoners over hun leven hier (en ook bij een over wat ze deden voor ze hier woonden).
+
+Bij het eten bleef ik deze keer bij de derde groep, waarbij de ouderen zijn. Omdat de meeste van hun niet veel kracht in hun handen meer hebben, heb ik al hun eten eerst gesneden. Hun gehoor was wel een moeilijkheid bij het converseren tijdens het eten, maar toch heb ik de meeste tijd over hun leven kunnen praten en dingen kunnen bijleren.
 
 \subsubsection{Namiddag}
+Om 13:30 begint de namiddag met de gewoonlijke vergadering, waarin buiten de bespreking van de gebeurde zaken ook de planning voor deze namiddag besproken wordt. Ik heb nu, net als vorige week wandelen met Bart.
+% check name
 % more
 
 \section{Ervaringen}
@@ -173,13 +182,15 @@ We beginnen echter met het juist steken van de voetsteunen van een rolstoel. Ik 
 % halve bladzijde
 Na mijn stage heb ik te horen gekregen van elk van de begeleiders --- voor ik zelfs voor feedback vroeg --- dat ik een goeie aanvulling was, en zelfs --- al dan niet als grap --- voorstellen kreeg om toch hier te komen werken.
 
-Volgens de begeleider waarbij ik de muziekactiviteit deed, heb ik goed aangevuld bij de activiteit. Letterlijk zei hij het volgende:
+Volgens de begeleider waarbij ik de muziekactiviteit deed, heb ik goed aangevuld bij de activiteit. Letterlijk zei hij het volgende in een sms:
 
 \begin{quotation}
   Je hebt het vandaag goed gedaan hoor in het muziekproject!
 \end{quotation}
 
 Volgens de andere begeleiders kan ik ``goed omgaan met de bewoners'' en ``breng ik [\dots] op een positieve manier aan het lachen''.
+
+Jurgen heeft mijn evaluatie volgens het blad ingevuld. Hierin schrijft hij dat hij tevreden is van mijn prestaties
 % more
 
 \subsection{Door mezelf}
